--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,11 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+ db.default.driver=org.postgresql.Driver
+ db.default.url="postgres://ilike:ilike@localhost:5432/ilike"
+ db.default.user=ilike
+ db.default.password=ilike
+
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
@@ -51,7 +56,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ ebean.default="models.*"
 
 # Logger
 # ~~~~~
